WIP rewrite belts as belt lanes